# M1

./: .README.md.kate-swp  PP.g4  README.md
Architectures Logicielles Distribuées/RMI/cabinet/: DrawIOUML.desktop  DépotGithub.desktop  ToDO.md  readme.md
Architectures Logicielles Distribuées/RMI/cabinet vétérinaire/: .gitignore  Animal.java  AnimalImpl.java  Client.java  Server.java
Architectures Logicielles Distribuées/RMI/cabinetVet/: Animal.java  AnimalImpl.java  CabinnetVeterinaireImpl.java  Client.java  Espece.java  Espese.java  EspeseImpl.java  IAnimal.java  ICabinetVeterinaire.java  IEspece.java  IEspese.java  ISuiviAnimal.java  Server.java  SuiviAnimal.java  SuiviAnimalImpl.java  ToDO.md  readme.md
Architectures Logicielles Distribuées/RMI/helloWorld/: Client.java  Server.java
Architectures Logicielles Distribuées/Service Web SOAP-WSDL/: readme.md
Architectures Logicielles Distribuées/Service Web SOAP-WSDL/TP-SW-SOAP/: Diagramme sans nom.drawio  hotel booking  hotel reservation.drawio  hotel version 1.drawio
Compilation/: DéposCompilation.desktop  SujetCompilation.desktop  SujetCompilation2.desktop  repo (2).desktop  repo(1).desktop  repo.desktop
Compilation/Allocation De Registres/src/: Edges.java  EdgesInterface.java  Graph.java  GraphInterface.java  Main.java  (+4 more)
Compilation/Rendu PP vers UPP/: PP.java  UPP.java
Compilation/rendu PP vers UPP UPP vers RTL/: PP.java  UPP.java
Ingénierie Logicielle/TD1 correction/: Makefile  README.txt
Programmation Répartie/Projet/: .gitrepo  CMakeLists.txt  SocketClientServer.c  main.c  test.c  testParser.c
(+135 files in other folders)
